--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
 }
+
 header {
     background-color: #444;
     height: 98px;
@@ -32,6 +33,9 @@ nav li a{
     text-decoration:none;
     color: #eee;
     font-size: 16px;
+    position: relative;
+    top: 40px;
+    
 }
 
 main {
@@ -45,7 +49,6 @@ main > img:first-child{
 
 main > ul {
     margin-top: 30px;
-    background-color: orange;
     overflow: hidden;
 }
 
